--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Bilafgift</title>
-  <base href="/">
+  <head>
+    <meta charset="utf-8" />
+    <title>Bilafgift</title>
+    <base href="/" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="https://skat.dk/style/skat4.css?v=88" />
+  </head>
+  <body>
+    <div class="container">
+      <app-root></app-root>
+    </div>
+  </body>
 </html>
